# SylowSolver

./: .gitignore  .pylintrc  Auto.hs  Core.hs  NumberTheory.hs  PROGRESS.md  README-Haskell.md  README.md  STATE_MONAD_ANALYSIS.md  StateEnvironment.hs  StateMain.hs  SylowSolver.hs  auto2.py  compare_coverage.py  core.py  env.py  readme.tex  sylow-solver.cabal  sylow2.py
scripts/: diff_canonical.py  extract_py_snapshot.py
src/: DebugLog.hs  Errors.hs  Main.hs  Matching.hs  Math.hs  ProofPrinter.hs  Prover.hs  PureProver.hs  Streaming.hs  SylowIO.hs  Theorems.hs  Types.hs
test/: AutoSpec.hs  CoreSpec.hs  NumberTheorySpec.hs  Spec.hs
