cabal-version: 2.4
name: sylow-solver
version: 0.1.0.0
synopsis: Haskell port of the SylowSolver theorem prover
description: 
    A lightweight theorem-proving engine for group theory, specifically
    designed to solve problems related to Sylow subgroups. This is a 
    Haskell port of the original Python implementation.
    
homepage: https://github.com/menezesd/SylowSolver
category: Math, Logic, Theorem Proving
build-type: Simple
extra-source-files: README.md

executable sylow-solver
    main-is: Main.hs
    other-modules:
        DebugLog,
        Errors,
        Matching,
        Math,
        ProofPrinter,
        Prover,
        PureProver,
        Streaming,
        SylowIO,
        Theorems,
        Types
    build-depends:
      base,
      containers,
      mtl,
      heap
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N